@@ -15,3 +15,4 @@ depth: 1
 
  * Make "Cancel scheduled publish" button correctly redirect back to the edit view (Sage Abdullah)
  * Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
+ * Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
