@@ -38,6 +38,7 @@ depth: 1
  * Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
  * Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
  * Remove the ability to view or add comments to `InlinePanel` inner fields to avoid lost or incorrectly linked comments (Jacob Topp-Mugglestone)
+ * Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
 
 ### Documentation
 
